--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,34 @@
     --color-body: hsl(208, 11%, 55%);
     --color-background: hsl(193, 100%, 96%);
 }
+
+html{
+    font-size: 10px;
+}
+
+body{
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: var(--color-body);
+    font-size: 1.8rem;
+    line-height: 1.5;
+    /*this also applies to the callout section*/
+}
+
+h1,
+h2,
+h3{
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    color: var(--color-headings);
+}
+
+h1{
+    font-size: 3.052rem;
+}
+
+h2{
+    font-size: 2.441rem;
+}
+
+h3{
+    font-size: 1.953rem;
+}
