Defined styles for links.

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,14 @@ h2{
 h3{
     font-size: 1.953rem;
 }
+
+
+/*Links*/
+.link-underline{
+    text-decoration: none;
+    color: #ccc;
+}
+
+.link-underline:hover{
+    text-decoration: underline;
+}
