--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --color-headings: hsl(192, 100%, 9%);
     --color-body: hsl(208, 11%, 55%);
     --color-background: hsl(193, 100%, 96%);
+    --color-white: #fff;
 }
 
 html{
@@ -52,4 +53,21 @@ h3{
 .list{
     list-style: none;
     padding-left: 0;
+}
+
+body{
+    background: var(--color-headings);
+}
+
+/*Icons*/
+.icon{
+    width: 20px;
+    height: 20px;
+    fill: var(--color-white);
+}
+
+.icon-round{
+    border: 1px solid var(--color-white);
+    padding: 0.7rem;
+    border-radius: 100%;
 }
