--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --color-body: hsl(208, 11%, 55%);
     --color-background: hsl(193, 100%, 96%);
     --color-white: #fff;
+    --color-grey: #ccc;
 }
 
 html{
@@ -41,12 +42,13 @@ h3{
 /*Links*/
 .link-underline{
     text-decoration: none;
-    color: #ccc;
+    color: var(--color-grey);
 }
 
 .link-underline:hover{
     text-decoration: underline;
 }
+
 
 
 /*Lists*/
@@ -55,9 +57,7 @@ h3{
     padding-left: 0;
 }
 
-body{
-    background: var(--color-headings);
-}
+
 
 /*Icons*/
 .icon{
@@ -66,8 +66,43 @@ body{
     fill: var(--color-white);
 }
 
-.icon-round{
+.icon-social{
     border: 1px solid var(--color-white);
     padding: 0.7rem;
     border-radius: 100%;
+}
+
+
+
+/*Buttons*/
+.btn{
+    border-radius: 30px;
+    border: 0;
+    box-shadow: 0 5px 10px var(--color-grey);
+    cursor: pointer;
+    font-weight: 700;
+    margin: 2rem;
+    outline: 0;
+    padding: 2rem 7rem;
+}
+
+.btn--primary{
+    background: var(--color-primary);
+    color: var(--color-white);
+}
+
+.btn--primary:hover{
+    background: hsl(322, 89%, 72%);
+}
+
+.btn--white{
+    background: var(--color-white);
+}
+
+.btn--white:hover{
+    color: hsl(0, 0%, 30%);
+}
+
+.btn--small{
+    padding: 1.3rem 4.3rem;
 }
