Defined styles for the footer block.

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -1,4 +1,4 @@
 <header class="nav">
-  <img class="nav__logo" src="images/logo.svg" alt="" />
+  <img class="logo" src="images/logo.svg" alt="" />
   <button class="btn btn--white btn--small nav__btn">Try It Free</button>
 </header>
