--- a/components/hero.html
+++ b/components/hero.html
@@ -1,6 +1,6 @@
 <header class="hero">
   <header class="nav hero__header">
-    <img class="nav__logo" src="images/logo.svg" alt="" />
+    <img class="logo" src="images/logo.svg" alt="" />
     <button class="btn btn--white btn--small nav__btn">Try It Free</button>
   </header>
   <div class="grid grid--1x2 hero__content">
