--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,11 @@ body{
     /*this also applies to the callout section*/
 }
 
+.logo{
+    width: 150px;
+    height: 25px;
+}
+
 h1,
 h2,
 h3{
@@ -73,6 +78,7 @@ h3{
 .icon-social{
     border: 1px solid var(--color-white);
     padding: 0.7rem;
+    margin: 1rem;
     border-radius: 100%;
 }
 
@@ -154,11 +160,6 @@ h3{
     justify-content: space-between; 
 }
 
-.nav__logo{
-    width: 150px;
-    height: 25px;
-}
-
 .nav__btn{
     margin: 0;
 }
@@ -235,4 +236,71 @@ h3{
 
 .card img{
     width: 100%;
+}
+
+
+
+/*Footer*/
+.footer{
+    display: grid;
+    background: var(--color-headings);
+    padding: 16rem 2rem 5rem 2rem;
+}
+
+@media screen and (min-width:768px){
+    .footer{
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 3rem;
+    }
+}
+
+.footer__list-item{
+    display: flex;
+    align-items: center;
+    margin: 2.5rem 0 2.5rem;
+}
+
+.footer__list-item:first-child {
+    align-items: baseline;
+}
+
+.footer__icon{
+    padding-right: 2.5rem;
+}
+
+
+.footer__list-item:first-child .footer__icon{
+    position: relative;
+    top: 6px;
+    padding-right: 3.3rem;
+}
+
+
+.list .remove-margin-top{
+    margin-top: 0;
+}
+
+@media screen and (min-width:768px){
+.footer__list-item-grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+}
+
+.footer__last{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (min-width:768px){
+    .footer__last{
+        align-items: flex-start;
+    }
+
+    .footer__last-social{
+        margin-bottom: 20rem;
+    }
+
 }
