--- a/components/cards.html
+++ b/components/cards.html
@@ -11,3 +11,30 @@
     </div>
   </div>
 </div>
+
+<div class="card">
+  <div class="grid grid--1x2">
+    <img src="images/illustration-grow-together.svg" alt="" />
+    <div class="card__content">
+      <h2>Flowing Conversations</h2>
+      <p>
+        You wouldn't paginate a conversation in real life, so why do it online?
+        Our threads have just-in-time loading for a more natural flow.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="grid grid--1x2">
+    <img src="images/illustration-grow-together.svg" alt="" />
+    <div class="card__content">
+      <h2>Your Users</h2>
+      <p>
+        It takes no time at all to integrate Huddle with your app's
+        authentication solution. This means, once signed in to your app, your
+        users can start chatting immediately.
+      </p>
+    </div>
+  </div>
+</div>
