--- a/css/styles.css
+++ b/css/styles.css
@@ -320,3 +320,13 @@ h3{
     }
 
 }
+
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%); 
+}
