--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ h3{
 
 /*Cards*/
 .card{
-    padding: 7rem 5rem 4rem;
+    padding: 7rem 2rem 4rem;
     text-align: center;
     box-shadow: 0 0 10px var(--color-grey);
     max-width: 310px;
@@ -224,9 +224,17 @@ h3{
     border-radius: 10px;
 }
 
+@media screen and (min-width:415px){
+    .card{
+        padding: 7rem 3rem 4rem;
+        max-width: 330px;
+    }
+}
+
 
 @media screen and (min-width:600px){
     .card{
+        padding: 7rem 4rem 4rem;
         max-width: 450px;
     }
 }
@@ -234,6 +242,7 @@ h3{
 
 @media screen and (min-width:768px){
     .card{
+        padding: 7rem 5rem 4rem;
         max-width: 600px;
     }
 }
@@ -241,6 +250,8 @@ h3{
 @media screen and (min-width:1024px){
     .card{
         max-width: 1024px;
+        padding: 7rem 9rem 5rem;
+
     }
 }
 
