--- a/css/styles.css
+++ b/css/styles.css
@@ -144,12 +144,18 @@ h3{
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    max-width: 450px;
+    max-width: 310px;
     padding: 2rem;
     text-align: center;
     background: var(--color-white);
     position: relative;
     bottom: -8rem;
+}
+
+@media screen and (min-width:500px){
+    .callout{
+        min-width: 430px;
+    }
 }
 
 @media screen and (min-width:768px){
